# fettle

./: .gitignore  CHANGELOG.md  LICENSE  PARITY.md  README.md  fettle.toml.example  pyproject.toml
.github/workflows/: ci.yml
contrib/: yay-init.lua
fettle/: __init__.py  __main__.py  actions.py  cli.py  command.py  config.py  distro.py  htmlreport.py  output.py  remote.py  reports.py  runlog.py  util.py
fettle/advisories/: __init__.py  apt_base.py  arch_source.py  base.py  check.py  db.py  debian_source.py  osv.py  osv_source.py  ubuntu_source.py
fettle/ai/: __init__.py  client.py  snapshot.py  upgrade_check.py
fettle/aur/: __init__.py  audit.py  common.py  ioc.py  ioc_scan.py  meta.py  precheck.py
fettle/backends/: __init__.py  arch.py  base.py  debian.py
fettle/hardening/: __init__.py  audit.py  baseline.py  engine.py  report.py  score.py
fettle/secure/: __init__.py  audit.py  base.py  checks.py  remote.py  secureboot.py
fettle/supplychain/: __init__.py  base.py  (+4 more)
tests/: conftest.py  test_action_registry.py  test_actions.py  test_advisories.py  test_ai_client.py  test_ai_snapshot.py  test_ai_upgrade_check.py  test_apt_source.py  test_arch.py  test_aur_audit.py  test_aur_ioc.py  test_aur_ioc_scan.py  test_aur_meta.py  test_aur_precheck.py  test_aur_source.py  test_cli.py  test_command.py  test_config.py  test_context.py  test_debian.py  test_distro.py  test_flatpak_source.py  test_hardening.py  test_hardening_render.py  test_hardening_report.py  test_hardening_score.py  test_htmlreport.py  test_integrity.py  test_maintenance.py  test_output.py  test_remote.py  test_reports.py  test_reports_json.py  test_runlog.py  test_secure_checks.py  test_secureboot.py  test_snap_source.py  test_sysaudit_cli.py  test_sysaudit_report.py  test_upgrade_check_cli.py  (+2 more)
(+5 files in other folders)
