[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fettle"
version = "0.19.0"
description = "Cross-distribution Linux system-maintenance and supply-chain tool"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Paul Asadoorian", email = "paul@rihackers.com" }]
dependencies = []  # runtime: pure standard library, on purpose

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
# The web UI (`fettle web`) — the ONLY runtime dependency, and strictly opt-in.
# The core CLI stays pure-stdlib (`dependencies = []`) so the remote zipapp keeps
# working under any bare python3; nothing outside fettle/web/ may import nicegui.
web = ["nicegui>=2"]

[project.scripts]
fettle = "fettle.cli:main"

[tool.setuptools.packages.find]
include = ["fettle*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
